@startuml
title KSR_Ling_Class_diagram_ling

class Agregator{
    - List<FuzzySet> setList
    - List<Boolean> andList
    - List<Label> variableList

    void addSet(FuzzySet, boolean)
    double tNorm(double, double)
    static double implication(double, double)
    double DoM(FoodItem)
    List<FoodItem> UoD()
    int size()
    double cardinality()
    String getVariableName(int)
    String getVariableValue(int)
}

class Quantifier{
    - String name
    - MembershipFuction memberFunc
    - boolean isAbsolute
    - boolean isForthForm

    double getValue(double)
}

class Subject{
    - String toFind
    - String name
    - boolean neg

    boolean isPartOf(FoodItem)
    List<FoodItem> filter(List<FoodItem>)
}

class Summary{
    - Quantifier quantifier
    - Subject subject
    - Subject secondSubject
    - Agregator qualifier
    - Agregator summarizer
    - SummaryType summaryType

    - double T1()
    - double T2()
    - double T3()
    - double T4()
    - double T5()
    double optimalSummaryMetric(List<Double>)
    - double T6()
    - double T7()
    - double T8()
    - double T9()
    - double T10()
    - double T11()
    double ExtendedOptimalSummaryMetric(List<Double>)
    List<double> getStandardMeasures(List<Double>)
    List<Double> getCompoundMeasure()
    String generateLinguisticSummary()

}


class SummaryBuilder{
    static Summary buildSummary(Quantifier, List<Subject>, Agregator, Agregator, SummaryType)
}

enum SummaryType {
    SINGLE_SUBJECT(0),
    FIRST_FORM(1),
    SECOND_FORM(2),
    THIRD_FORM(3),
    FOURTH_FORM(4)

    int value;

    SummaryType(int value)
}

class Variable{
    - String name
    - Field foodProperty
    - List<String> values
    - List<MemberFunc> memberFuncList

    double getFuncValue(String, double)
    MemberFunc getMemberFunc(String)
}

class Label{
    - String name
    - Field foodProperty
    - String value
}

Summary *-u- SummaryType
Summary o-l- Quantifier
Summary o-- Subject
Summary o-r- Agregator
Summary .d.> SummaryBuilder
Label ..> Variable
Label --o Agregator